--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@InfoAssetsWorld" />
     <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/tIEiklqjmPNNQzWykAOd0pKsNov2/social-images/social-1757588223837-IAW-Logo.png">
+
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#0F172A" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="IAW" />
+    <link rel="apple-touch-icon" href="/lovable-uploads/7edae356-b2d1-4e7d-96ba-9dcadd8a7061.png" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
 
   <body>
